[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utis"
version = "0.1.0"
authors = [
  { name="Mathias Kuhl", email="mathias.kuhl@dlr.de" },
]
description = "UNet-based Target Image Segmentation for Solar Tower Calibration"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 1 - Planning",
]
dependencies = [
    "numpy",
    "Pillow",
    "pytorch-lightning",
    "torch",
    "torchvision",
]

[project.urls]
Homepage = "https://github.com/ARTIST-Association/ARTIST"
Issues = "https://github.com/DLR-SF/UTIS-HeliostatBeamCharacterization/issues"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
